--- a/wether/wether.html
+++ b/wether/wether.html
@@ -9,8 +9,8 @@
     
 </head>
 <body>
+    <div class="title"><h1>TEMPERATURE</h1></div>
     <div  class="h1">
-    <h1>Temperature</h1>
     <div class="Search_Box"><br>
     <input type="text" id="city" placeholder="ENTER CITY NAME"><br><br>
     <BUtton onclick="temp()" id="bu">SEARCH</BUtton>
